menu component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
-<custom-menu options='["Home" , "News", "Contact", "About"]'></custom-menu>
-
-<handle-events></handle-events>
-
-<wc-mood mood="world"></wc-mood>
-
-<lit-element-drop-down
-  title="Chose your subject"
-  value="German"
-  closed="true"
-  options='["International Busines", "Organizational Development", "Accounting for Managers"]'
->
-</lit-element-drop-down>
+<!-- Menu bar Angular componet -->
+<app-header></app-header>
 
 <router-outlet></router-outlet>
