--- a/src/app/views/news/news/news.component.html
+++ b/src/app/views/news/news/news.component.html
@@ -1,4 +1,5 @@
 <hr />
+<p><b>Angular Example.</b></p>
 <p><b>Two way binding using from.</b></p>
 <div *ngIf="form">
   <form [formGroup]="form" (submit)="submit()">
