route stepper added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- Menu bar Angular componet -->
 <app-header></app-header>
+<br />
+<app-stepper-menu [steps]="steps"></app-stepper-menu>
 
 <router-outlet></router-outlet>
