--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
 <br />
 <p>Lit-Element example.</p>
-<custom-menu options=""></custom-menu>
 <br />
 
 <handle-events></handle-events>
@@ -9,7 +8,7 @@
 
 <lit-element-drop-down
   title="Chose your subject"
-  value="German"
+  value="Accounting for Managers"
   closed="true"
   options='["International Busines", "Organizational Development", "Accounting for Managers"]'
 >
